--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ requires-python = ">=3.9"
 dependencies = [
     "aiowhitebit==0.1.5",
     "fastmcp==2.1.2",
+    "pydantic>=2.0.0",
+    "aiohttp>=3.8.0",
 ]
 
 [project.optional-dependencies]
@@ -61,7 +63,8 @@ known-first-party = ["aiowhitebit_mcp"]
 
 [tool.pyright]
 pythonVersion = "3.9"
-typeCheckingMode = "strict"
+typeCheckingMode = "standard"
 reportMissingImports = true
 reportMissingTypeStubs = false
+include = ["src/**", "examples/**", "tests/**"]
 exclude = ["tests/**"]
