Main implementation of mcp server with aiowhitebit (#1)
* edits and test attempts

* edits and test attempts

* flexing with tests

* refactor(tests): update private API tests and pytest config

- Refactor private API tests to use manual server/client creation
- Add proper cleanup with try/finally blocks
- Ensure server is closed after each test
- Set explicit asyncio_default_fixture_loop_scope in pytest config

The changes improve test isolation and follow the integration tests pattern.
Each test now creates its own server and client instances, making tests
more reliable and easier to debug. The pytest configuration update removes
deprecation warning by explicitly setting the event loop scope to "function".

* chore(lint): enable Ruff unsafe fixes

Enable unsafe fixes in Ruff configuration to allow automatic
fixing of docstring formatting and other similar issues.
This will help maintain consistent code style with less
manual intervention.

* remomve unused

* ruff check finished

* preparation for 1st release

* preparation for 1st release

* preparation for 1st release

* preparation for 1st release

* removed private client
removed multiexchange
changed config for pyright

* changes for pyright

* changes for pyright

* edits for starting stdio or sse

* claude desktop client not working for now

* written good examples for stdio and sse server - client

* ## What's Changed

### Bug Fixes
- Fixed JSON serialization in cache to handle non-serializable objects
- Added better error handling for corrupted cache files
- Extended WhiteBitMCPClient to support direct Python file paths as transport

### Documentation
- Updated examples to demonstrate using file path as transport

* simpler test flow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "aiowhitebit-mcp"
-version = "0.1.0"
+version = "0.2.2"
 description = "MCP server and client for WhiteBit cryptocurrency exchange API"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
-    "aiowhitebit==0.1.5",
-    "fastmcp==2.1.2",
+    "aiowhitebit==0.2.0",
+    "fastmcp==2.2.5",
+    "pydantic>=2.0.0",
+    "aiohttp>=3.8.0",
 ]
 
 [project.optional-dependencies]
@@ -27,6 +29,7 @@ testpaths = ["tests"]
 python_files = "test_*.py"
 python_functions = "test_*"
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 markers = [
     "asyncio: mark a test as an asyncio test",
     "slow: mark test as slow",
@@ -35,7 +38,9 @@ markers = [
 
 [tool.ruff]
 line-length = 120
-target-version = "py39"
+target-version = "py310"
+
+[tool.ruff.lint]
 select = [
     "E",    # pycodestyle errors
     "W",    # pycodestyle warnings
@@ -50,15 +55,17 @@ select = [
     "TCH",  # flake8-type-checking
 ]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["aiowhitebit_mcp"]
 
 [tool.pyright]
-pythonVersion = "3.9"
-typeCheckingMode = "strict"
-reportMissingImports = true
-reportMissingTypeStubs = false
-exclude = ["tests/**"]
+include = ["src"]
+exclude = ["**/node_modules", "**/__pycache__", "exzample/**"]
+typeCheckingMode = "basic"
+pythonVersion = "3.10"
+stubPath = "typings"
+venvPath = "."
+venv = ".venv"
