--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,25 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "aiowhitebit-mcp"
-version = "0.2.2"
+version = "0.2.3"
 description = "MCP server and client for WhiteBit cryptocurrency exchange API"
+readme = "README.md"
+authors = [
+    {name = "doubledare704", email = "doubledare704@gmail.com"}
+]
+license = {text = "Apache License 2.0"}
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Internet :: WWW/HTTP",
+]
+keywords = ["whitebit", "cryptocurrency", "exchange", "api", "mcp", "claude"]
 requires-python = ">=3.10"
 dependencies = [
     "aiowhitebit==0.2.0",
@@ -23,6 +40,15 @@ dev = [
     "pyright>=1.1.399",
     "pre-commit>=3.6.2",
 ]
+
+[project.urls]
+"Homepage" = "https://github.com/doubledare704/aiowhitebit-mcp"
+"Bug Tracker" = "https://github.com/doubledare704/aiowhitebit-mcp/issues"
+"Documentation" = "https://github.com/doubledare704/aiowhitebit-mcp#readme"
+"Source Code" = "https://github.com/doubledare704/aiowhitebit-mcp"
+
+[project.scripts]
+aiowhitebit-mcp = "aiowhitebit_mcp.cli:main"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
