--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "aiowhitebit-mcp"
-version = "0.2.3"
+version = "0.2.4"
 description = "MCP server and client for WhiteBit cryptocurrency exchange API"
 readme = "README.md"
 authors = [
@@ -25,7 +25,7 @@ classifiers = [
 keywords = ["whitebit", "cryptocurrency", "exchange", "api", "mcp", "claude"]
 requires-python = ">=3.10"
 dependencies = [
-    "aiowhitebit==0.2.0",
+    "aiowhitebit==0.2.1",
     "fastmcp==2.2.5",
     "pydantic>=2.0.0",
     "aiohttp>=3.8.0",
@@ -89,7 +89,7 @@ known-first-party = ["aiowhitebit_mcp"]
 
 [tool.pyright]
 include = ["src"]
-exclude = ["**/node_modules", "**/__pycache__", "exzample/**"]
+exclude = ["**/node_modules", "**/__pycache__", "exzample/**", "tests/**"]
 typeCheckingMode = "basic"
 pythonVersion = "3.10"
 stubPath = "typings"
